--- a/model_bbox/Classifier_directory.ipynb
+++ b/model_bbox/Classifier_directory.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -57,12 +57,29 @@
     "ROWS = 224\n",
     "COLS = 224\n",
     "BatchSize = 128\n",
-    "LearningRate = 1e-4"
+    "LearningRate = 1e-4\n",
+    "\n",
+    "def load_img(path, bbox, target_size=None):\n",
+    "    img = Image.open(path)\n",
+    "    img = img.convert('RGB')\n",
+    "    cropped = img.crop((bbox[0],bbox[1],bbox[2],bbox[3]))\n",
+    "    if target_size:\n",
+    "        cropped = cropped.resize((target_size[1], target_size[0]))\n",
+    "    return cropped\n",
+    "\n",
+    "def preprocess_input(x):\n",
+    "    #resnet50 image preprocessing\n",
+    "    # 'RGB'->'BGR'\n",
+    "    x = x[:, :, ::-1]\n",
+    "    x[:, :, 0] -= 103.939\n",
+    "    x[:, :, 1] -= 116.779\n",
+    "    x[:, :, 2] -= 123.68\n",
+    "    return x"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -71,63 +88,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Generating file GTbbox_df.pickle.\n",
-      "ALB\n",
-      "    image_class     image_file  crop_index crop_class        xmin        ymin  \\\n",
-      "616         ALB  img_01800.jpg         6.0        LAG  871.666667  534.916667   \n",
-      "\n",
-      "            xmax   ymax  \n",
-      "616  1142.333333  720.0  \n",
-      "     image_class     image_file  crop_index crop_class       xmin        ymin  \\\n",
-      "1121         ALB  img_03397.jpg         1.0        LAG  80.083333  144.333333   \n",
-      "\n",
-      "            xmax        ymax  \n",
-      "1121  330.916667  363.666667  \n",
-      "     image_class     image_file  crop_index crop_class        xmin  \\\n",
-      "1136         ALB  img_03451.jpg         1.0        LAG  550.916667   \n",
-      "\n",
-      "            ymin        xmax   ymax  \n",
-      "1136  557.416667  692.083333  720.0  \n",
-      "     image_class     image_file  crop_index crop_class   xmin    ymin    xmax  \\\n",
-      "1259         ALB  img_03748.jpg         4.0        LAG  847.5  531.75  1134.5   \n",
-      "\n",
-      "       ymax  \n",
-      "1259  720.0  \n",
-      "BET\n",
-      "DOL\n",
-      "     image_class     image_file  crop_index crop_class        xmin      ymin  \\\n",
-      "2935         DOL  img_07212.jpg         1.0        ALB  371.352808  8.083631   \n",
-      "\n",
-      "            xmax        ymax  \n",
-      "2935  901.130654  345.619329  \n",
-      "     image_class     image_file  crop_index crop_class        xmin      ymin  \\\n",
-      "2936         DOL  img_07212.jpg         2.0        ALB  439.163525  44.26582   \n",
-      "\n",
-      "            xmax        ymax  \n",
-      "2936  897.282987  219.211116  \n",
-      "LAG\n",
-      "OTHER\n",
-      "SHARK\n",
-      "     image_class     image_file  crop_index crop_class  xmin    ymin  \\\n",
-      "3523       SHARK  img_06082.jpg         0.0        LAG   0.0  264.25   \n",
-      "\n",
-      "            xmax    ymax  \n",
-      "3523  124.416667  498.75  \n",
-      "     image_class     image_file  crop_index crop_class   xmin        ymin  \\\n",
-      "3524       SHARK  img_06082.jpg         1.0        ALB  429.5  278.666667   \n",
-      "\n",
-      "       xmax        ymax  \n",
-      "3524  744.5  423.333333  \n",
-      "     image_class     image_file  crop_index crop_class        xmin  \\\n",
-      "3525       SHARK  img_06082.jpg         2.0        ALB  581.833333   \n",
-      "\n",
-      "            ymin         xmax        ymax  \n",
-      "3525  195.333333  1018.166667  358.666667  \n",
-      "YFT\n",
-      "0\n",
-      "1000\n",
-      "2000\n",
-      "3000\n"
+      "Loading from file GTbbox_df.pickle.\n"
      ]
     }
    ],
@@ -252,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -260,25 +221,9 @@
    "source": [
     "#train data prepare\n",
     "\n",
-    "def load_img(path, bbox, target_size=None):\n",
-    "    img = Image.open(path)\n",
-    "    img = img.convert('RGB')\n",
-    "    cropped = img.crop((bbox[0],bbox[1],bbox[2],bbox[3]))\n",
-    "    if target_size:\n",
-    "        cropped = cropped.resize((target_size[1], target_size[0]))\n",
-    "    return cropped\n",
-    "\n",
-    "def preprocess_input(x):\n",
-    "    #resnet50 image preprocessing\n",
-    "    # 'RGB'->'BGR'\n",
-    "    x = x[:, :, ::-1]\n",
-    "    x[:, :, 0] -= 103.939\n",
-    "    x[:, :, 1] -= 116.779\n",
-    "    x[:, :, 2] -= 123.68\n",
-    "    return x\n",
-    "\n",
+    "nb_perClass = int(BatchSize / len(FISH_CLASSES)) \n",
     "samples_per_epoch=BatchSize*math.ceil(train_df.groupby('crop_class').size()['ALB']/nb_perClass)\n",
-    "nb_perClass = int(BatchSize / len(FISH_CLASSES))   \n",
+    "  \n",
     "def train_generator(datagen, df):\n",
     "    while 1:\n",
     "        batch_x = np.zeros((BatchSize, ROWS, COLS, 3), dtype=K.floatx())\n",
@@ -661,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -726,53 +671,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0th augmentation for testing ...\n",
-      "50\n",
-      "100\n",
-      "150\n",
-      "200\n",
-      "250\n",
-      "300\n",
-      "0\n",
-      "1th augmentation for testing ...\n",
-      "50\n",
-      "100\n",
-      "150\n",
-      "200\n",
-      "250\n",
-      "300\n",
-      "0\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "crop_class\n",
-       "ALB      0.081091\n",
-       "BET      0.063883\n",
-       "DOL      0.138732\n",
-       "LAG      0.000025\n",
-       "NoF      0.068032\n",
-       "OTHER    0.032348\n",
-       "SHARK    0.005033\n",
-       "YFT      0.050724\n",
-       "Name: logloss, dtype: float64"
-      ]
-     },
-     "execution_count": 82,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#GTbbox_CROPpred_df = ['image_class','image_file','crop_index','crop_class','xmin','ymin','xmax','ymax',\n",
     "#                      'NoF', 'ALB', 'BET', 'DOL', 'LAG', 'OTHER', 'SHARK', 'YFT', 'logloss']\n",
@@ -832,7 +735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -841,12 +744,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Generating file RFCNbbox_RFCNpred_df.pickle.\n",
-      "0\n",
-      "1000\n",
-      "2000\n",
-      "3000\n",
-      "4000\n"
+      "Loading from file RFCNbbox_RFCNpred_df.pickle.\n"
      ]
     }
    ],
@@ -920,7 +818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -1013,17 +911,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    },
+    {
+     "ename": "IndexError",
+     "evalue": "single positional indexer is out-of-bounds",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-15-6686dad38f8c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     10\u001b[0m     \u001b[0mimage_file\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtest_files\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m     \u001b[0mtest_preds_im_df\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mRFCNbbox_RFCNpred_CROPpred_df\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mloc\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mRFCNbbox_RFCNpred_CROPpred_df\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'image_file'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0mimage_file\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 12\u001b[0;31m     \u001b[0mimage_class\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtest_preds_im_df\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0miloc\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'image_class'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     13\u001b[0m     \u001b[0mtest_preds_im_df\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtest_preds_im_df\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'NoF_CROP'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'ALB_CROP'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'BET_CROP'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'DOL_CROP'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'LAG_CROP'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'OTHER_CROP'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'SHARK_CROP'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'YFT_CROP'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m     \u001b[0mtest_preds_im_df\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolumns\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mFISH_CLASSES\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/opt/anaconda3/lib/python3.5/site-packages/pandas/core/indexing.py\u001b[0m in \u001b[0;36m__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   1294\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_getitem_tuple\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1295\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1296\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_getitem_axis\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1297\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1298\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m_getitem_axis\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkey\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/opt/anaconda3/lib/python3.5/site-packages/pandas/core/indexing.py\u001b[0m in \u001b[0;36m_getitem_axis\u001b[0;34m(self, key, axis)\u001b[0m\n\u001b[1;32m   1610\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1611\u001b[0m                 \u001b[0;31m# validate the location\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1612\u001b[0;31m                 \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_is_valid_integer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1613\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1614\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_get_loc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0maxis\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/opt/anaconda3/lib/python3.5/site-packages/pandas/core/indexing.py\u001b[0m in \u001b[0;36m_is_valid_integer\u001b[0;34m(self, key, axis)\u001b[0m\n\u001b[1;32m   1524\u001b[0m         \u001b[0ml\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0max\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1525\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mkey\u001b[0m \u001b[0;34m>=\u001b[0m \u001b[0ml\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0mkey\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0;34m-\u001b[0m\u001b[0ml\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1526\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mIndexError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"single positional indexer is out-of-bounds\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1527\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1528\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mIndexError\u001b[0m: single positional indexer is out-of-bounds"
+     ]
+    }
+   ],
    "source": [
     "# clsMaxAve\n",
     "# test_pred_df = ['image_class','image_file','NoF', 'ALB', 'BET', 'DOL', 'LAG', 'OTHER', 'SHARK', 'YFT']\n",
     "\n",
+    "with open(\"../RFCN/ImageSets/Main/test.txt\",\"r\") as f:\n",
+    "    test_files = f.readlines()\n",
+    "    \n",
     "test_pred_df = pd.DataFrame(columns=['image_class','image_file','NoF', 'ALB', 'BET', 'DOL', 'LAG', 'OTHER', 'SHARK', 'YFT'])  \n",
-    "\n",
     "for j in range(len(test_files)):\n",
     "    if j%1000 == 0: print(j)\n",
     "    image_file = test_files[j]\n",
@@ -1031,9 +953,9 @@
     "    image_class = test_preds_im_df.iloc[0]['image_class']\n",
     "    test_preds_im_df = test_preds_im_df[['NoF_CROP', 'ALB_CROP', 'BET_CROP', 'DOL_CROP', 'LAG_CROP', 'OTHER_CROP', 'SHARK_CROP', 'YFT_CROP']]\n",
     "    test_preds_im_df.columns = FISH_CLASSES    \n",
-    "    test_preds_im = np.asarray(test_preds_im_df)\n",
-    "    score_max = np.max(test_preds_im, axis=1)\n",
-    "    inds = np.argmax(test_preds_im, axis=1)\n",
+    "    test_preds_im_array = np.asarray(test_preds_im_df)\n",
+    "    score_max = np.max(test_preds_im_array, axis=1)\n",
+    "    inds = np.argmax(test_preds_im_array, axis=1)\n",
     "    labels = [FISH_CLASSES[ind] for ind in inds]    \n",
     "    test_preds_im_df['max_cls'] = labels\n",
     "    test_preds_im_df['max_score'] = score_max \n",
@@ -1042,10 +964,71 @@
     "    test_preds_im_df = test_preds_im_df[idx]\n",
     "    l = FISH_CLASSES.copy()\n",
     "    l.append('Counts')\n",
-    "    test_preds_im_array = test_preds_im_df[l].as_matrix()\n",
-    "    test_preds_im = [image_class,image_file]\n",
-    "    test_preds_im.extend(np.average(test_preds_im_array[:,:-1], axis=0, weights=test_preds_im_array[:,-1], returned=False).tolist())\n",
-    "    test_pred_df.loc[len(GTbbox_df)]=test_preds_im"
+    "    test_preds_im_clsMax = test_preds_im_df[l].as_matrix()\n",
+    "    test_preds_im_clsMaxAve = [image_class,image_file]\n",
+    "    test_preds_im_clsMaxAve.extend(np.average(test_preds_im_clsMax[:,:-1], axis=0, weights=test_preds_im_clsMax[:,-1], returned=False).tolist())\n",
+    "    test_pred_df.loc[len(GTbbox_df)]=test_preds_im_clsMaxAve"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>image_class</th>\n",
+       "      <th>image_file</th>\n",
+       "      <th>crop_index</th>\n",
+       "      <th>xmin</th>\n",
+       "      <th>ymin</th>\n",
+       "      <th>xmax</th>\n",
+       "      <th>ymax</th>\n",
+       "      <th>NoF_RFCN</th>\n",
+       "      <th>ALB_RFCN</th>\n",
+       "      <th>BET_RFCN</th>\n",
+       "      <th>...</th>\n",
+       "      <th>SHARK_RFCN</th>\n",
+       "      <th>YFT_RFCN</th>\n",
+       "      <th>NoF_CROP</th>\n",
+       "      <th>ALB_CROP</th>\n",
+       "      <th>BET_CROP</th>\n",
+       "      <th>DOL_CROP</th>\n",
+       "      <th>LAG_CROP</th>\n",
+       "      <th>OTHER_CROP</th>\n",
+       "      <th>SHARK_CROP</th>\n",
+       "      <th>YFT_CROP</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>0 rows × 23 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [image_class, image_file, crop_index, xmin, ymin, xmax, ymax, NoF_RFCN, ALB_RFCN, BET_RFCN, DOL_RFCN, LAG_RFCN, OTHER_RFCN, SHARK_RFCN, YFT_RFCN, NoF_CROP, ALB_CROP, BET_CROP, DOL_CROP, LAG_CROP, OTHER_CROP, SHARK_CROP, YFT_CROP]\n",
+       "Index: []\n",
+       "\n",
+       "[0 rows x 23 columns]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_preds_im_df"
    ]
   },
   {
@@ -1058,6 +1041,10 @@
    "source": [
     "#temperature\n",
     "T = 1\n",
+    "def softmax_T(row,T):\n",
+    "    preds_T = np.ndarray([row[fish] for fish in FISHCLASSES])\n",
+    "    preds_T = math.exp(math.log(preds)/T)\n",
+    "    preds_T = preds_T/math.sum(preds_T, axis=1, keepdims=True)\n",
     "test_preds_T_df = np.exp(np.log(test_preds)/T)\n",
     "test_preds_T_df = test_preds_T/np.sum(test_preds_T, axis=1, keepdims=True)"
    ]
