--- a/model_bbox/Classifier_directory.ipynb
+++ b/model_bbox/Classifier_directory.ipynb
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -583,11 +583,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading model from checkpoints file ./checkpoints/checkpoint4/weights.018-0.1897.hdf5\n",
+      "Epoch 1/300\n",
+      "16000/16128 [============================>.] - ETA: 2s - loss: 0.0359 - acc: 0.9897Epoch 00000: val_loss improved from inf to 0.19667, saving model to ./checkpoints/checkpoint4/weights.000-0.1967.hdf5\n",
+      "16128/16128 [==============================] - 395s - loss: 0.0357 - acc: 0.9897 - val_loss: 0.1967 - val_acc: 0.9480\n",
+      "Epoch 2/300\n",
+      "16000/16128 [============================>.] - ETA: 2s - loss: 0.0350 - acc: 0.9884Epoch 00001: val_loss did not improve\n",
+      "16128/16128 [==============================] - 369s - loss: 0.0349 - acc: 0.9883 - val_loss: 0.1992 - val_acc: 0.9439\n",
+      "Epoch 3/300\n",
+      "16000/16128 [============================>.] - ETA: 2s - loss: 0.0307 - acc: 0.9909Epoch 00002: val_loss did not improve\n",
+      "16128/16128 [==============================] - 369s - loss: 0.0307 - acc: 0.9909 - val_loss: 0.2121 - val_acc: 0.9501\n",
+      "Epoch 4/300\n",
+      "16000/16128 [============================>.] - ETA: 2s - loss: 0.0305 - acc: 0.9900Epoch 00003: val_loss did not improve\n",
+      "16128/16128 [==============================] - 369s - loss: 0.0303 - acc: 0.9901 - val_loss: 0.2009 - val_acc: 0.9459\n",
+      "Epoch 5/300\n",
+      "16000/16128 [============================>.] - ETA: 2s - loss: 0.0284 - acc: 0.9911Epoch 00004: val_loss did not improve\n",
+      "16128/16128 [==============================] - 369s - loss: 0.0283 - acc: 0.9912 - val_loss: 0.1968 - val_acc: 0.9470\n",
+      "Epoch 6/300\n",
+      "16000/16128 [============================>.] - ETA: 2s - loss: 0.0243 - acc: 0.9922Epoch 00005: val_loss did not improve\n",
+      "16128/16128 [==============================] - 369s - loss: 0.0244 - acc: 0.9922 - val_loss: 0.2240 - val_acc: 0.9459\n",
+      "Epoch 7/300\n",
+      "16000/16128 [============================>.] - ETA: 2s - loss: 0.0269 - acc: 0.9916Epoch 00006: val_loss did not improve\n",
+      "\n",
+      "Epoch 00006: reducing learning rate to 9.999999747378752e-07.\n",
+      "16128/16128 [==============================] - 369s - loss: 0.0269 - acc: 0.9916 - val_loss: 0.2417 - val_acc: 0.9407\n",
+      "Epoch 8/300\n",
+      "16000/16128 [============================>.] - ETA: 2s - loss: 0.0231 - acc: 0.9935Epoch 00007: val_loss did not improve\n",
+      "16128/16128 [==============================] - 369s - loss: 0.0231 - acc: 0.9935 - val_loss: 0.2304 - val_acc: 0.9439\n",
+      "Epoch 9/300\n",
+      "16000/16128 [============================>.] - ETA: 2s - loss: 0.0207 - acc: 0.9937Epoch 00008: val_loss did not improve\n",
+      "16128/16128 [==============================] - 369s - loss: 0.0207 - acc: 0.9937 - val_loss: 0.2180 - val_acc: 0.9470\n",
+      "Epoch 10/300\n",
+      "16000/16128 [============================>.] - ETA: 2s - loss: 0.0172 - acc: 0.9958Epoch 00009: val_loss did not improve\n",
+      "16128/16128 [==============================] - 369s - loss: 0.0176 - acc: 0.9957 - val_loss: 0.2179 - val_acc: 0.9480\n",
+      "Epoch 11/300\n",
+      "16000/16128 [============================>.] - ETA: 2s - loss: 0.0236 - acc: 0.9936Epoch 00010: val_loss did not improve\n",
+      "16128/16128 [==============================] - 369s - loss: 0.0236 - acc: 0.9936 - val_loss: 0.2159 - val_acc: 0.9470\n",
+      "Epoch 12/300\n",
+      "16000/16128 [============================>.] - ETA: 2s - loss: 0.0222 - acc: 0.9932Epoch 00011: val_loss did not improve\n",
+      "\n",
+      "Epoch 00011: reducing learning rate to 9.999999974752428e-08.\n",
+      "16128/16128 [==============================] - 369s - loss: 0.0225 - acc: 0.9931 - val_loss: 0.2153 - val_acc: 0.9491\n",
+      "Epoch 00011: early stopping\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.callbacks.History at 0x7f2c14ef38d0>"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#resume training\n",
     "\n",
