--- a/model_bbox/Classifier_directory.ipynb
+++ b/model_bbox/Classifier_directory.ipynb
@@ -868,28 +868,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(6037, 15)"
-      ]
-     },
-     "execution_count": 79,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "RFCNbbox_RFCNpred_df.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 80,
    "metadata": {
     "collapsed": false
@@ -936,7 +914,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 108,
    "metadata": {
     "collapsed": false
    },
@@ -945,13 +923,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 43.7 s, sys: 0 ns, total: 43.7 s\n",
-      "Wall time: 43.4 s\n"
+      "CPU times: user 45.8 s, sys: 8 ms, total: 45.8 s\n",
+      "Wall time: 45.5 s\n"
      ]
     }
    ],
    "source": [
-    "%%time\n",
     "# clsMaxAve\n",
     "# test_pred_df = ['logloss','image_class','image_file','NoF', 'ALB', 'BET', 'DOL', 'LAG', 'OTHER', 'SHARK', 'YFT']\n",
     "\n",
@@ -989,15 +966,12 @@
    "metadata": {},
    "source": [
     "# visualization\n",
-    "# RFCNbbox_RFCNpred_CROPpred_df = ['image_class', 'image_file','crop_index','x_min','y_min','x_max','ymax',\n",
-    "#                                    'NoF_RFCN', 'ALB_RFCN', 'BET_RFCN', 'DOL_RFCN',\n",
-    "#                                    'LAG_RFCN', 'OTHER_RFCN', 'SHARK_RFCN', 'YFT_RFCN'\n",
-    "#                                    'NoF_CROP', 'ALB_CROP', 'BET_CROP', 'DOL_CROP',\n",
-    "#                                    'LAG_CROP', 'OTHER_CROP', 'SHARK_CROP', 'YFT_CROP']\n",
-    "for j in range(0,4777,500):\n",
-    "    image_file = test_pred_df.iat[j,2]\n",
-    "    image_class = test_pred_df.iat[j,1]\n",
+    "\n",
+    "for j in range(test_pred_df.shape[0]):\n",
     "    image_logloss = test_pred_df.iat[j,0]\n",
+    "    image_class = test_pred_df.iat[j,1]\n",
+    "    image_file = test_pred_df.iat[j,2]\n",
+    "    if image_class != 'NoF' or image_logloss < 0.5: continue\n",
     "    im = Image.open('../RFCN/JPEGImages/'+image_file)\n",
     "    im = np.asarray(im)\n",
     "    fig, ax = plt.subplots(figsize=(10, 8))\n",
@@ -1034,7 +1008,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 95,
    "metadata": {
     "collapsed": false
    },
@@ -1045,22 +1019,22 @@
      "text": [
       "image_class\n",
       "--            NaN\n",
-      "ALB      0.071553\n",
-      "BET      0.034714\n",
-      "DOL      0.134487\n",
-      "LAG      0.000026\n",
-      "NoF      0.555833\n",
-      "OTHER    0.011206\n",
-      "SHARK    0.058536\n",
-      "YFT      0.027249\n",
+      "ALB      0.254759\n",
+      "BET      0.149360\n",
+      "DOL      0.123326\n",
+      "LAG      0.016397\n",
+      "NoF      0.499984\n",
+      "OTHER    0.094661\n",
+      "SHARK    0.077260\n",
+      "YFT      0.137261\n",
       "Name: logloss, dtype: float64\n",
-      "logloss of train is 0.11591109204068295\n"
+      "logloss of train is 0.22728975809675533\n"
      ]
     }
    ],
    "source": [
     "#temperature\n",
-    "T = 1\n",
+    "T = 2.5\n",
     "test_pred_array = test_pred_df[FISH_CLASSES].values\n",
     "test_pred_T_array = np.exp(np.log(test_pred_array)/T)\n",
     "test_pred_T_array = test_pred_T_array/np.sum(test_pred_T_array, axis=1, keepdims=True)\n",
@@ -1068,7 +1042,7 @@
     "test_pred_T_df = pd.concat([test_pred_df[['image_class','image_file']],test_pred_T_df], axis=1)\n",
     "\n",
     "#add logloss\n",
-    "test_pred_T_df['logloss'] = test_pred_T_df.apply(lambda row: , axis=1)\n",
+    "test_pred_T_df['logloss'] = test_pred_T_df.apply(lambda row: -math.log(row[row['image_class']]) if row['image_class']!='--' else np.nan, axis=1)\n",
     "\n",
     "#calculate train logloss\n",
     "print(test_pred_T_df.groupby(['image_class'])['logloss'].mean())\n",
@@ -1078,7 +1052,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 98,
    "metadata": {
     "collapsed": false
    },
@@ -1087,14 +1061,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Done!RFCN_AGONOSTICnms_resnet101_rfcn_ohem_iter_30000_CROP_resnet50_clsMaxAve_conf0.80_T1_0.1159.csv\n"
+      "Done!RFCN_AGONOSTICnms_resnet101_rfcn_ohem_iter_30000_CROP_resnet50_clsMaxAve_conf0.80_T2.5_0.2273.csv\n"
      ]
     }
    ],
    "source": [
     "#test submission\n",
-    "\n",
-    "submission = test_pred_T_df.iloc[:1000,2:]\n",
+    "submission = test_pred_T_df.loc[:999,['image_file','NoF', 'ALB', 'BET', 'DOL', 'LAG', 'OTHER', 'SHARK', 'YFT']]\n",
     "submission.rename(columns={'image_file':'image'}, inplace=True)\n",
     "sub_file = 'RFCN_AGONOSTICnms_'+RFCN_MODEL+'_CROP_resnet50_clsMaxAve_conf{:.2f}_T{}_'.format(CONF_THRESH, T)+'{:.4f}'.format(train_logloss)+'.csv'\n",
     "submission.to_csv(sub_file, index=False)\n",
